# chess-ui

./: build.sh  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: main.yml
src/: components.ts  index.css  piece.ts
src/components/: board.ts  game.ts
wasm/: build.sh
wasm/lib/: Cargo.toml
wasm/lib/src/: bitboard.rs  bitboardindex.rs  board.rs  bot.rs  console_log.rs  lib.rs  piece.rs  square.rs
wasm/lib/src/movegen/: magic.rs  mod.rs  precalc.rs
